# medical-ai-serving-platform

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/routers/: health.py  inference.py  models.py
app/api/schemas/: inference.py
app/core/: config.py  logger.py  registry.py
app/inference/: __init__.py  engine.py  pipeline.py  postprocess.py  preprocess.py
app/models/: base.py  medgemma_model.py  mock_model.py
app/services/: inference_service.py
scripts/: bootstrap.ps1
